fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 .App {
@@ -18,7 +19,6 @@ html {
 
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 nav {
@@ -300,7 +300,7 @@ HIGHLIGHTS
   background: url("./assets/wave.svg");
   content: "";
   position: absolute;
-  width: 101vw;
+  width: 100vw;
   height: 12vw;
   left: 0;
   z-index: 1;
